feat: snapshot by backup
Create snapshots by proxmox backup api methods.

Signed-off-by: Serge Logvinov <serge.logvinov@sinextra.dev>

--- a/docs/deploy/test-statefulset.yaml
+++ b/docs/deploy/test-statefulset.yaml
@@ -45,6 +45,6 @@ spec:
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
-            storage: 50Gi
-        storageClassName: proxmox-lvm
+            storage: 10Gi
+        storageClassName: proxmox-zfs
         # volumeAttributesClassName: test
